--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -25,26 +25,31 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
-      - name: Extract branch name
-        id: extract_branch
-        run: |
-          BRANCH=${GITHUB_REF#refs/heads/}
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUSH_TOKEN }}
+      - name: Set env
+        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
+      - name: Test
+        run: echo $GITHUB_SHA_SHORT
+#      - name: Extract branch name
+#        id: extract_branch
+#        run: |
+#          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 #          BRANCH=${GITHUB_REF#refs/heads/}
 #          echo "${BRANCH}"
 #          echo "${GITHUB_REF#refs/heads/}"
-          echo "::set-output name=region::$(echo ${BRANCH})"
       - name: Deploy to production
         uses: appleboy/ssh-action@master
-        env: ${{ steps.extract.outputs.env }}
-#        env:
-#          COMPOSER_INSTALL: ${{ github.event.inputs.COMPOSER_INSTALL }}
-#          NPM_INSTALL:  ${{ github.event.inputs.NPM_INSTALL }}
-#          #          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
-#          DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION }}
-##          BRANCH_NAME: ${{ github.ref_name }}
-#          BRANCH: ${GITHUB_REF#refs/heads/}
-##          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
-##          BRANCH_NAME: ${GITHUB_REF#refs/heads/}
+        env:
+          COMPOSER_INSTALL: ${{ github.event.inputs.COMPOSER_INSTALL }}
+          NPM_INSTALL:  ${{ github.event.inputs.NPM_INSTALL }}
+          #          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
+          DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION }}
+          BRANCH_NAME: ${{ github.ref_name }}
+          BRANCH: ${GITHUB_REF#refs/heads/}
+#          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
+#          BRANCH_NAME: ${GITHUB_REF#refs/heads/}
         with:
           host: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_NAME }}
@@ -53,7 +58,7 @@ jobs:
           envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
           script: |
             cd ${{ secrets.MASTER_PATH }}
-            echo "Current branch on server is: ${GITHUB_REF#refs/heads/}"
+            echo "Current branch on server is: ${{ steps.extract_branch.outputs.BRANCH_NAME }}"
             ../dev-deploy.sh
 
 #            echo ${GITHUB_REF#refs/heads/}
