--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -29,9 +29,9 @@ jobs:
         with:
           token: ${{ secrets.PUSH_TOKEN }}
       - name: Set env
-        run: echo "GITHUB_SHA_SHORT=$(echo ${GITHUB_REF#refs/heads/} | cut -c 1-6)" >> $GITHUB_ENV
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | cut -c 1-6)" >> $GITHUB_ENV
       - name: Test
-        run: echo $GITHUB_SHA_SHORT
+        run: echo $BRANCH_NAME
 #      - name: Extract branch name
 #        id: extract_branch
 #        run: |
@@ -46,7 +46,7 @@ jobs:
           NPM_INSTALL:  ${{ github.event.inputs.NPM_INSTALL }}
           #          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
           DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION }}
-          BRANCH_NAME: ${{ github.ref_name }}
+          BRANCH_NAME: ${{ env.BRANCH_NAME }}
           BRANCH: ${GITHUB_REF#refs/heads/}
 #          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
 #          BRANCH_NAME: ${GITHUB_REF#refs/heads/}
