--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           token: ${{ secrets.PUSH_TOKEN }}
       - name: Set env
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | cut -c 1-6)" >> $GITHUB_ENV
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
       - name: Test
         run: echo $BRANCH_NAME
 #      - name: Extract branch name
@@ -58,7 +58,7 @@ jobs:
           envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
           script: |
             cd ${{ secrets.MASTER_PATH }}
-            echo "Current branch on server is: ${{ steps.extract_branch.outputs.BRANCH_NAME }}"
+            echo "Current branch on server is: ${{ env.BRANCH_NAME }}"
             ../dev-deploy.sh
 
 #            echo ${GITHUB_REF#refs/heads/}
